--- a/app/src/main/res/layout/activity_comparison.xml
+++ b/app/src/main/res/layout/activity_comparison.xml
@@ -110,7 +110,7 @@
     <!--</RelativeLayout>-->
 
     <ProgressBar
-        android:id="@+id/pb_loading_indicator"
+        android:id="@+id/compare_loading_indicator"
         android:layout_height="42dp"
         android:layout_width="42dp"
         android:layout_gravity="center"
@@ -120,6 +120,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="1:1"
+        android:theme="@style/progressAccent"
 
     />
 
