--- a/app/src/main/res/layout/destination_item.xml
+++ b/app/src/main/res/layout/destination_item.xml
@@ -1,16 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout android:layout_height="wrap_content"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:orientation="vertical">
-    <ImageView android:layout_height="0dp"
-               android:layout_weight="1"
-               android:layout_width="match_parent"
-               android:adjustViewBounds="true"
-               android:scaleType="centerInside"
-               android:contentDescription="@string/destination_item_description"
-    android:id="@+id/destination_item"
-    android:layout_margin="8dp">
-    </ImageView>
-</LinearLayout>
+<!--<LinearLayout android:layout_height="wrap_content"-->
+<!--xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--android:layout_width="match_parent"-->
+<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--android:orientation="vertical">-->
+<!--<ImageView android:layout_height="0dp"-->
+<!--android:layout_weight="1"-->
+<!--android:layout_width="match_parent"-->
+<!--android:adjustViewBounds="true"-->
+<!--android:scaleType="centerInside"-->
+<!--android:contentDescription="@string/destination_item_description"-->
+<!--android:id="@+id/destination_item"-->
+<!--android:layout_margin="8dp">-->
+<!--</ImageView>-->
+
+<android.support.design.card.MaterialCardView
+    android:id="@+id/qolcard"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="10dp"
+    android:minHeight="100dp"
+    app:cardCornerRadius="10dp"
+   >
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+                  android:orientation="vertical">
+        <ImageView android:id="@+id/destination_item"
+                   android:layout_width="match_parent"
+                   android:layout_height="0dp"
+                   android:layout_weight="1"
+                   android:adjustViewBounds="true"
+                   android:contentDescription="@string/destination_item_description"
+                   android:scaleType="centerInside"/>
+
+        <TextView
+            android:id="@+id/destination_city"
+            style="@style/Base.TextAppearance.AppCompat.Body2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:fontFamily="sans-serif"
+            android:gravity="start|center_horizontal"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            tools:text="New Delhi"/>
+
+    </LinearLayout>
+
+</android.support.design.card.MaterialCardView>
+    <!--</LinearLayout>-->
