--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="toolbarStyle">@style/AppThemeToolbar</item>
         <item name="searchViewStyle">@style/WittySearchView</item>
+        <!--<item name="autoCompleteTextViewStyle">@style/cursorColor</item>-->
+
     </style>
 
     <style name="AppThemeToolbar" parent="Widget.AppCompat.Toolbar">
@@ -27,6 +29,7 @@
     <style name="WittySearchView" parent="Widget.AppCompat.Light.SearchView">
         <item name="submitBackground">@android:color/transparent</item>
         <item name="queryBackground">@android:color/transparent</item>
+        <item name="android:textCursorDrawable">@null</item>
     </style>
 
     <!-- The launcher theme. It sets the main window background to the launch_screen drawable -->
@@ -34,6 +37,10 @@
         <item name="android:windowBackground">@drawable/launch_screen</item>
         <!-- Optional, on Android 5+ you can modify the colorPrimaryDark color to match the windowBackground color for further branding-->
         <!-- <item name="colorPrimaryDark">@android:color/white</item> -->
+    </style>
+
+    <style name="cursorColor" parent="Widget.AppCompat.AutoCompleteTextView">
+        <item name="android:textCursorDrawable">@drawable/cursor</item>
     </style>
 
 
