--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,31 @@
         <item name="searchViewStyle">@style/WittySearchView</item>
         <!--<item name="autoCompleteTextViewStyle">@style/cursorColor</item>-->
 
+        <item name="android:windowExitTransition">
+            @transition/grid_exit
+        </item>
+        <item name="android:windowEnterTransition">
+            @transition/grid_exit
+        </item>
+
+        <item name="android:windowReenterTransition">
+            @transition/grid_exit
+        </item>
+
+        <item name="android:windowReturnTransition">
+            @transition/grid_exit
+        </item>
+
+
+        <item name="android:windowAllowEnterTransitionOverlap">false</item>
+        <item name="android:windowSharedElementsUseOverlay">false</item>
+
+        <item name="android:windowContentTransitions">false</item>
+        <item name="android:windowActivityTransitions">true</item>
+
+        <!--<item name="android:windowAnimationStyle">@style/CustomActivityAnimation</item>-->
+
+
     </style>
 
     <style name="AppThemeToolbar" parent="Widget.AppCompat.Toolbar">
@@ -56,5 +81,11 @@
         <item name="android:navigationBarColor">@android:color/white</item>
     </style>
 
+    <style name="CustomActivityAnimation" parent="@android:style/Animation.Activity">
+        <item name="android:activityOpenEnterAnimation">@anim/slide_in_right</item>
+        <item name="android:activityOpenExitAnimation">@anim/slide_out_left</item>
+        <item name="android:activityCloseEnterAnimation">@anim/slide_in_left</item>
+        <item name="android:activityCloseExitAnimation">@anim/slide_out_right</item>
+    </style>
 
 </resources>
